# ThreeBodyFractal3

./: .gitignore  CMakeLists.txt  README.md
cmake/: configure_cli11.cmake  configure_cpp_nbt.cmake  configure_fractal_utils.cmake  configure_libnbtplusplus.cmake  configure_nlohmann_json.cmake  get_lto_options.cmake
libcudathreebody/: CMakeLists.txt  internal.h  libcudathreebody.cu  libcudathreebody.h  simulate.cu  test_cutb.cpp
libthreebody/: CMakeLists.txt  compile_time_pow.h  libthreebody.cpp  libthreebody.h  test_loadD3B3.cpp  test_tb.cpp
libthreebodyfractal/: CMakeLists.txt  coloring.cpp  example.json  libthreebodyfractal.cpp  libthreebodyfractal.h  load_binfile.cpp  memory_resource.cpp  memory_resource.h  save_binfile.cpp  save_load_json.cpp  test_allocator.cpp  test_render.cpp  test_tbf.cpp  test_tbf2.cpp  test_tbf_load.cpp  test_tbf_load_2.cpp  test_tbf_other_input.cpp  threebodyfractal.cpp  threebodyfractal.h
old/: CMakeLists.txt  Derivative.cpp  Derivative.h  MultiRec.h  Solvers.h  main.cpp
tbf-render/: CMakeLists.txt  tbf-render.cpp
tbf-task-gen/: CMakeLists.txt  tbf-task-gen.cpp  tbf-task.cpp  tbf-task.h
tbf-task-run/: CMakeLists.txt  tbf-task-run.cpp
tbfcvt/: CMakeLists.txt  tbfcvt.cpp
tbfsingle/: CMakeLists.txt  run_compute.cpp  run_render.cpp  taskinfo.h  tbfsingle.cpp
threebodyzoomer/: CMakeLists.txt  zoomer.cpp
